# BMG-CHESS-BOARD

./: CMakeLists.txt  README.md  main.cpp
Bamtang/: Bamtang.vcxproj  main.cpp
